@@ -123,17 +123,14 @@ AR = ar
 # Command to remove temporary files
 RM = del
 
-# Flags for which FMU type, me, cs or me+cs.
-FMU_TYPES =
-
 # Extra compiler options
 EXT_OPTION = 
 
 # C++ Compiler options
-CXXFLAGS = $(PLATFORM_FLAG) $(EXT_OPTION) -g ${FMU_TYPES}
+CXXFLAGS = $(PLATFORM_FLAG) $(EXT_OPTION) -g 
 
 # C Compiler options
-CFLAGS = $(PLATFORM_FLAG) $(EXT_OPTION) -g -std=c89 -pedantic ${FMU_TYPES} -msse2 -mfpmath=sse
+CFLAGS = $(PLATFORM_FLAG) $(EXT_OPTION) -g -std=c89 -pedantic -msse2 -mfpmath=sse
 
 SHARED_LDFLAGS = $(PLATFORM_FLAG) -shared
 
@@ -214,9 +211,9 @@ fmucs10_: $(OBJS)
 
 fmume20:
 ifeq ($(PLATFORM),win32)
-	"$(MAKE)" -f "$(MAKEFILE)" EXT_OPTION=-mincoming-stack-boundary=2 FMU_TYPES+=-DFMUME20 fmume20_
+	"$(MAKE)" -f "$(MAKEFILE)" EXT_OPTION=-mincoming-stack-boundary=2 fmume20_
 else
-	"$(MAKE)" -f "$(MAKEFILE)" "PLATFORM_FLAG=$(PLATFORM_64)" "RUNTIMELIBRARY_LIB_DIR=$(RUNTIMELIBRARY_LIB_DIR64)" "MINPACK_LIB_DIR=$(MINPACK_LIB_DIR64)" "SUNDIALS_LIB_DIR=$(SUNDIALS_LIB_DIR64)" FMU_TYPES+=-DFMUME20 fmume20_
+	"$(MAKE)" -f "$(MAKEFILE)" "PLATFORM_FLAG=$(PLATFORM_64)" "RUNTIMELIBRARY_LIB_DIR=$(RUNTIMELIBRARY_LIB_DIR64)" "MINPACK_LIB_DIR=$(MINPACK_LIB_DIR64)" "SUNDIALS_LIB_DIR=$(SUNDIALS_LIB_DIR64)" fmume20_
 endif
 
 fmume20_: $(OBJS)
@@ -226,9 +223,9 @@ fmume20_: $(OBJS)
 
 fmucs20:
 ifeq ($(PLATFORM),win32)
-	"$(MAKE)" -f "$(MAKEFILE)" EXT_OPTION=-mincoming-stack-boundary=2 FMU_TYPES+=-DFMUCS20 fmucs20_
+	"$(MAKE)" -f "$(MAKEFILE)" EXT_OPTION=-mincoming-stack-boundary=2 fmucs20_
 else
-	"$(MAKE)" -f "$(MAKEFILE)" "PLATFORM_FLAG=$(PLATFORM_64)" "RUNTIMELIBRARY_LIB_DIR=$(RUNTIMELIBRARY_LIB_DIR64)" "MINPACK_LIB_DIR=$(MINPACK_LIB_DIR64)" "SUNDIALS_LIB_DIR=$(SUNDIALS_LIB_DIR64)" FMU_TYPES+=-DFMUCS20 fmucs20_
+	"$(MAKE)" -f "$(MAKEFILE)" "PLATFORM_FLAG=$(PLATFORM_64)" "RUNTIMELIBRARY_LIB_DIR=$(RUNTIMELIBRARY_LIB_DIR64)" "MINPACK_LIB_DIR=$(MINPACK_LIB_DIR64)" "SUNDIALS_LIB_DIR=$(SUNDIALS_LIB_DIR64)" fmucs20_
 endif
 
 fmucs20_: $(OBJS)
@@ -238,9 +235,9 @@ fmucs20_: $(OBJS)
 
 fmumecs20:
 ifeq ($(PLATFORM),win32)
-	"$(MAKE)" -f "$(MAKEFILE)" EXT_OPTION=-mincoming-stack-boundary=2 FMU_TYPES+=-DFMUME20 FMU_TYPES+=-DFMUCS20 fmucs20_
+	"$(MAKE)" -f "$(MAKEFILE)" EXT_OPTION=-mincoming-stack-boundary=2 fmucs20_
 else
-	"$(MAKE)" -f "$(MAKEFILE)" PLATFORM_FLAG=$(PLATFORM_64) "RUNTIMELIBRARY_LIB_DIR=$(RUNTIMELIBRARY_LIB_DIR64)" "MINPACK_LIB_DIR=$(MINPACK_LIB_DIR64)" "SUNDIALS_LIB_DIR=$(SUNDIALS_LIB_DIR64)" FMU_TYPES+=-DFMUME20 FMU_TYPES+=-DFMUCS20 fmucs20_
+	"$(MAKE)" -f "$(MAKEFILE)" PLATFORM_FLAG=$(PLATFORM_64) "RUNTIMELIBRARY_LIB_DIR=$(RUNTIMELIBRARY_LIB_DIR64)" "MINPACK_LIB_DIR=$(MINPACK_LIB_DIR64)" "SUNDIALS_LIB_DIR=$(SUNDIALS_LIB_DIR64)" fmucs20_
 endif
 
 fmumecs20_: $(OBJS)
