@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Change ; Minor ; Compiler ; #5398
+Removed the need to define fmu type in the make file
+
 ; Feature ; Minor ; Compiler ; #5375
 Added compiler option "event_output_vars". When set, output variables are
 generated for each event indicator.
